force-app/main/default/objects/SFDC_Budget__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Optionally set this value and use subsequently to exclude inactive budgets</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>