force-app/main/default/objects/SFDC_Budget__c/fields/Approved_Claims__c.field-meta.xml
<CustomField>
    <fullName>Approved_Claims__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Sum of all approved claims. This field is calculated automatically and should not be entered manually.</description>
    <inlineHelpText>Sum of all approved claims. This field is calculated automatically and should not be entered manually.</inlineHelpText>
    <label>Approved Claims</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>