force-app/main/default/objects/SFDC_Budget__c/fields/Available_Budget__c.field-meta.xml
<CustomField>
    <fullName>Available_Budget__c</fullName>
    <description>Total budget less approved requests</description>
    <formula>Total_Active_Budget__c -  Approved_Requests__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Available Budget</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>