force-app/main/default/objects/SFDC_Budget__c/fields/Courses__c.field-meta.xml
<CustomField>
    <fullName>Courses__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Grant covers course fees</description>
    <inlineHelpText>Check if Grant covers course fees</inlineHelpText>
    <label>Courses</label>
    <type>Checkbox</type>
</CustomField>