force-app/main/default/objects/SFDC_Budget__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <description>Optionally assign an end date to the budget. Frequently used for accrual based budgets</description>
    <inlineHelpText>Optionally assign an end date to the budget. Frequently used for accrual based budgets</inlineHelpText>
    <label>End Date</label>
    <type>Date</type>
</CustomField>