force-app/main/default/objects/SFDC_Budget__c/fields/Fees__c.field-meta.xml
<CustomField>
    <fullName>Fees__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Grant Covers registration fees</description>
    <inlineHelpText>Check if grant covers registration fees</inlineHelpText>
    <label>Fees</label>
    <type>Checkbox</type>
</CustomField>