force-app/main/default/objects/SFDC_Budget__c/fields/Grant_Notes__c.field-meta.xml
<CustomField>
    <fullName>Grant_Notes__c</fullName>
    <description>Key information regarding grant usage and criteria</description>
    <inlineHelpText>Provide information to help determine purpose and usage of grant</inlineHelpText>
    <label>Grant Notes</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>