force-app/main/default/objects/SFDC_Budget__c/fields/Program_Area__c.field-meta.xml
<CustomField>
    <fullName>Program_Area__c</fullName>
    <description>Program Area the grant covers</description>
    <label>Program Area</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Aquatics</fullName>
            </value>
            <value>
                <fullName>FA/CPR</fullName>
            </value>
            <value>
                <fullName>​​​​​​​NAT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>