force-app/main/default/objects/SFDC_Budget__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <description>Optionally assign a start date to the budget. Frequently used for accrual based budgets</description>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>