force-app/main/default/objects/SFDC_Budget__c/fields/Unclaimed_Budget__c.field-meta.xml
<CustomField>
    <fullName>Unclaimed_Budget__c</fullName>
    <formula>Total_Active_Budget__c -  Approved_Claims__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unclaimed Budget</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>