force-app/main/default/objects/SFDC_Budget__c/recordTypes/Coop.recordType-meta.xml
<RecordType>
    <fullName>Coop</fullName>
    <active>true</active>
    <description>Use to fund specific partner account requests and allocations</description>
    <label>Partner Specific Funds</label>
</RecordType>